--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,8 +7,8 @@
 //     background: rgb(155, 184, 26);
 //     }
 .is-active {
-    color: red !important;
-    font-weight: bold;
+    color: #2700ff !important;
+    font-weight: bolder !important;
 }
 
 
