--- a/src/app/shop-profile/shop-profile.component.html
+++ b/src/app/shop-profile/shop-profile.component.html
@@ -5,9 +5,9 @@
        
     
 
-        <div class="accordion1">
+        <div class="accordion1"  style="background-color: #f3f3f3;">
             <h2 class="title2 subheading" (click)="opened2 = !opened2">Shop Information<i class="fa fa-chevron-down"></i> </h2> 
-            <div class="content-container2" [class.opened2]="opened2">
+            <div class="content-container2" [class.opened2]="opened2" style="height: 278px !important;">
                 <!--phto-->
                <div class="row">
                 <div class="col-sm-3" style="margin-bottom: 18px;">          
@@ -181,7 +181,7 @@
 
                 <div class="col-sm-12 form-inline" style="text-align: right;">
             
-                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
+                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;margin-top: -21px;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
                     
             
@@ -191,9 +191,10 @@
                 
             </div>
             </div>
+            <br>
 
             <form [formGroup]="shopprofile" >
-    <div class="accordion">
+    <div class="accordion"  style="background-color: #f3f3f3;">
         <h2 class="title subheading" (click)="opened = !opened">Shop Owner Information <i class="fa fa-chevron-down"></i> </h2> 
         <div class="content-container" [class.opened]="opened">
             <!--phto-->
@@ -366,7 +367,7 @@
                 
                 </div><!--End of row-->
 
-                <div class="col-sm-12 form-inline" style="text-align: right;">
+                <div class="col-sm-12 form-inline" style="text-align: right;margin-top: -17px;">
             
                     <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="uploadFile(shopprofile.value)" [disabled]='!shopprofile.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
@@ -380,9 +381,10 @@
     
     </div><!--End of Accordion-->
     </form>
+    <br>
 
     <form [formGroup]="shopprofile2" >
-    <div class="accordion1">
+    <div class="accordion1"  style="background-color: #f3f3f3;">
         <h2 class="title1 subheading" (click)="opened1 = !opened1">Business Hours <i class="fa fa-chevron-down"></i> </h2> 
         <div class="content-container1" [class.opened1]="opened1">
             <!--phto-->
