--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -1,3 +1,5 @@
+<!-- <div style="background-color: #f3f3f3;"> -->
+
 <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
 <h2 style="text-align: center;" class="mainheading">Services/Offer Details</h2>
 
@@ -13,7 +15,7 @@
     <div class="col-sm-12" style="width: 98%;">
 
 
-        <table  class="table table-responsive servicecss" *ngIf="serviceData1!=''">
+        <table  class="table table-responsive servicecss" *ngIf="serviceData1!=''" style="background-color: #f3f3f3;">
             <thead style="border-bottom: 0.5px solid #aeaeae;color: white;width: 100%;">
               <tr style="background: #202c45;">
                 <th colspan="6" style="text-align:center;border-right:solid 1px;font-weight: normal;font-size:14px;">Services offered in my shop</th>
@@ -39,7 +41,7 @@
               <tr *ngFor="let service of  serviceData1 | paginate: config ;  let i=index;" >
 
                 <td>{{i+1}}</td>
-                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: left;padding-left:21px;" readonly></td>
+                <td ><input id="service_{{service.service_id}}__{{i}}" type="number" value="{{service.service_id}}"  hidden><input id="servicename_{{service.service_id}}_{{i}}" type="text" value="{{service.service_name}}"  style="width: 250px;border:none;text-align: left;padding-left:21px;background-color: #f3f3f3;" readonly></td>
                 <td style="text-align: left;padding-left:21px;">
 
                   <span *ngIf="service.status == '1'">&nbsp;</span>
@@ -56,7 +58,7 @@
 
 
                                     </td>
-                <td>  <input id="model_{{service.service_id}}_{{i}}" type="number" value="{{service.model_id}}"  style="width: 60px;" hidden> <input id="modelname_{{service.service_id}}_{{i}}" type="text" value="{{service.model_name}}"  style="width: 150px;border:none;text-align: left;padding-left:21px;background-color: #fff;" readonly></td>
+                <td>  <input id="model_{{service.service_id}}_{{i}}" type="number" value="{{service.model_id}}"  style="width: 60px;" hidden> <input id="modelname_{{service.service_id}}_{{i}}" type="text" value="{{service.model_name}}"  style="width: 150px;border:none;text-align: left;padding-left:21px;background-color: #f3f3f3;" readonly></td>
                 <td style="text-align: left;"> <input id="amount_{{service.service_id}}_{{i}}"   type="number" min="0" value="{{service.actual_amount}}" (keyup)="removevalidateMsg(service.service_id)" style="width: 60px;">
                   <p id="validateamount_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;"> Enter the Amount</p>
                   <p id="validateamount1_{{service.service_id}}_{{i}}" style="color: red;display: none;font-size:10px;"> Enter the valided service Amount</p>
@@ -123,9 +125,9 @@
 
 
     <div class="row">
-    <div class="accordion">
-      <h2 class="title subheading " style="text-align: left;" (click)="opened = !opened">Add Service Price <i class="fa fa-chevron-down"></i> </h2>
-      <div class="content-container" [class.opened]="opened">
+    <div class="accordion" style="background-color: #f3f3f3;">
+      <h2 class="title subheading " style="text-align: left;" (click)="opened = !opened">Add Service Price <i class="fa fa-chevron-down"></i>  </h2>
+      <div class="content-container" [class.opened]="opened" style="background-color: #f3f3f3;">
 
 
 
@@ -139,7 +141,7 @@
           <td style="width: 170px;">
             <!-- <label style="width: 50px;">Service</label>  -->
 
-          <select   class="carmodelcls"  id="service" formControlName="service_id" style="width: 170px;" (ngModelChange) ="changeOtherToadd($event)">
+          <select   class="carmodelcls"  id="service" formControlName="service_id" style="width: 170px;background-color: white;" (ngModelChange) ="changeOtherToadd($event)">
 
             <option value="">--Select Services--</option>
 
@@ -169,7 +171,7 @@
           <td>
             <!-- <label style="width: 100px;">Model</label>  -->
 
-                <select   class="carmodelcls "  id="model" formControlName="model_id" style="padding-left: 2px !important;">
+                <select   class="carmodelcls "  id="model" formControlName="model_id" style="padding-left: 2px !important;background-color: white;">
 
                   <option value="">--Select Model--</option>
                   <option *ngFor="let m of servicemodelsdataobj" [value]="m.id">
@@ -192,7 +194,7 @@
           <td>
             <!-- <label class="customerProfileLbl" style="width: 100px;">Amount</label> -->
 
-             <input type="number" min="1"   style="padding-left: 2px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;height: 25px;">
+             <input type="number" min="1"   style="padding-left: 2px !important;"  id="newamount" class="lastname" placeholder="" formControlName="actual_amount" style="width: 60px;height: 25px;background-color: white;">
               <div *ngIf="shopserviceForm.controls['actual_amount'].touched && shopserviceForm.controls['actual_amount'].invalid ">
 
                 <div *ngIf="shopserviceForm.controls['actual_amount'].errors" style="color: red;">
@@ -228,14 +230,14 @@
 </div>
   </div>
 
-  <div class="col-md-6">
-    <div class="accordion1">
+  <div class="col-md-6" >
+    <div class="accordion1" style="background-color: #f3f3f3;">
       <h2 class="title1 subheading" style="text-align: left;" (click)="opened1 = !opened1">Add New Service <i class="fa fa-chevron-down"></i> </h2>
       <div class="content-container1" [class.opened1]="opened1">
     <!-- <div style="border: 1px solid;margin-left:0px!important;height: 68px;"> -->
       <!-- <h2 style="text-align: center;" class="mainheading">Add New Service</h2> -->
       <form [formGroup]="MasterserviceForm" name="pf">
-      <div class="table-responsive boxwidht" style="display: block;width: 100%;overflow-x: unset;padding-top: 3px;height: 100px;" id="shopservFormid2">
+      <div class="table-responsive boxwidht" style="display: block;width: 100%;overflow-x: unset;padding-top: 3px;height: 100px;height: 65px !important;" id="shopservFormid2">
         <table class="table" style="border: none;margin-top: -36px;border-collapse: inherit !important;padding-left:0px!important;margin-left:0px !important;">
           <tr style="text-align: Center;">
 
@@ -321,5 +323,5 @@
 <!-- </div> -->
     </div>
 
-
+  <!-- </div> -->
 <br>
