--- a/src/app/shop-service/shop-service.component.scss
+++ b/src/app/shop-service/shop-service.component.scss
@@ -85,13 +85,13 @@ tr
 
 
 .accordion{
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  // box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   // margin: 12px;
   // margin-left:80px;
   width:100%;
   // margin-left:275px;
   margin-left: 30px;
-  height:  125px !important;
+  // height:  125px !important;
   padding:10px;
 
 }
@@ -120,16 +120,10 @@ max-height: none;
 
 
 .accordion1{
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
-  // margin: 12px;
-  // margin-left:80px;
+  // box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   width:94%;
-  height:  125px !important;
-  // margin-left:275px;
-  // height: 163px;
   margin-left: 30px;
   padding:10px;
-
 }
 
 .title1  {
