--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,7 +120,7 @@
   <!-- both customer and shop owner -->
  
 
-  <mat-list-item *ngIf="userroleSes=='shopOwnerSes'"> <a class="txtunderline_remove" style="font-size: 16px !important;font-style: italic;color: #e81c2e;font-weight: bold;margin-left: 572px;text-transform: uppercase !important;">{{currentshopname}}</a> </mat-list-item>&nbsp; &nbsp;
+  <mat-list-item *ngIf="userroleSes=='shopOwnerSes'"> <a class="txtunderline_remove" style="font-size: 16px !important;font-style: italic;color: #2700ff;font-weight: bolder;margin-left: 572px;text-transform: uppercase !important;">{{currentshopname}}</a> </mat-list-item>&nbsp;
 
   <mat-list-item  *ngIf="userroleSes=='shopOwnerSes'"> <img src="{{apiurlforhtm}}/{{shoplogo}}" class="rounded-circle" style="height: 52px; width: 65px;"> </mat-list-item>
 
