--- a/src/app/customer-create/customer-create.component.html
+++ b/src/app/customer-create/customer-create.component.html
@@ -7,9 +7,9 @@
     </ul> -->
 <form [formGroup]="profileform" name="pf">
 
- <div class="accordion">
+ <div class="accordion" style="background-color: #f3f3f3;">
     <h2 class="title subheading"  (click)="opened = !opened">Personal Information <i class="fa fa-chevron-down"></i> </h2>
-    <div class="content-container" [class.opened]="opened">
+    <div class="content-container" [class.opened]="opened" >
            <!--phto-->
 
            <img *ngIf="CustomerDataById1.profile_img" style="width: 100px;height: 100px;"  src="{{apiurlforhtm}}/{{CustomerDataById1.profile_img}}" class="rounded-circle">
