chart, shop online booking

--- a/src/app/onlinebooking/onlinebooking.component.html
+++ b/src/app/onlinebooking/onlinebooking.component.html
@@ -10,7 +10,7 @@
 <div >
 
   <form [formGroup]="onlinebooking" class="form-container" >
-      <mat-card style="border: 1px solid #aeaeae;">
+      <mat-card style="border: 1px solid #aeaeae;background-color: #f3f3f3;">
 
         <!-- <mat-card-header>
           <mat-card-title>
