--- a/src/app/onlinebooking/onlinebooking.component.scss
+++ b/src/app/onlinebooking/onlinebooking.component.scss
@@ -148,7 +148,7 @@ padding: 1rem!important;
     //margin-left: 18px;
 }
 .textcls{
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
     border: none;
     //margin-left: 18px;
     // height: 150px;
@@ -161,13 +161,13 @@ padding: 1rem!important;
     height: 50px;
 }
 .datecls{
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
     border: none;
     width: 250px;
     height: 50px;
 }
 .carmodelcls{
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
     border: none;
     width: 150px;
     height: 50px;
@@ -249,13 +249,17 @@ padding: 1rem!important;
 }
 
 .card {
+  background: white;
+  border: 1px solid #aeaeae;
     // width: 92%;
-    background: rgb(0 0 0 / 5%);
+    // background: rgb(0 0 0 / 5%);
   }
 
 
 .accordion{
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: rgba(0, 0, 0, 0.14) 0px 5px 15px;
+  background: white;
+    // box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
     // margin: 12px;
     // margin-left:80px;
     width:98%;
