--- a/src/app/customer-create/customer-create.component.html
+++ b/src/app/customer-create/customer-create.component.html
@@ -296,11 +296,11 @@
     </div>
   </div>
 </form>
-
+<br>
 <form [formGroup]="cardetailForm">
   <!--Endof Personal-->
   <!--address start-->
-  <div class="accordion1">
+  <div class="accordion1" style="background-color: #f3f3f3;">
     <h2 class="title1 subheading" (click)="opened1 = !opened1">Car Details<i class="fa fa-chevron-down"></i></h2>
     <div class="content-container1" [class.opened1]="opened1">
 
@@ -509,7 +509,7 @@
 
 <br>
 
-<div class="accordion2">
+<div class="accordion2" style="background-color: #f3f3f3;">
 
 
     <h2 class="title2 subheading" (click)="opened2 = !opened2">My Favorite Shops<i class="fa fa-chevron-down"></i></h2>
