--- a/src/app/combo-offers/combo-offers.component.scss
+++ b/src/app/combo-offers/combo-offers.component.scss
@@ -105,7 +105,7 @@
 }
 
 .accordioncombooffers{
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  // box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   margin: 12px;
  // margin-left:80px;
   width:100% !important;
@@ -189,7 +189,7 @@
 
 .accordioncombooffers{
   align-items: center;
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+  // box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
  // margin: 12px;
  // margin-left:80px;
   width:98%;
