--- a/src/styles.scss
+++ b/src/styles.scss
@@ -367,7 +367,7 @@ input[type=number] {
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
 
-  background: linear-gradient(to bottom, white 0%, #31a0fc 100%) !important;
+  background: linear-gradient(to bottom, white 0%, gray 100%) !important;
 }
 
 .fa-file-excel-o:before{
