--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,8 +125,8 @@
   <mat-list-item  *ngIf="userroleSes=='shopOwnerSes'"> <img src="{{apiurlforhtm}}/{{shoplogo}}" class="rounded-circle" style="height: 52px; width: 65px;"> </mat-list-item>
 
 
-  <mat-list-item *ngIf="userroleSes=='CustomerSes'"  class="menudesk cursorcls" style="margin-left:400px;"> <a class="colorheaderMenu"   routerLink='/search' [routerLinkActive]="['is-active']" mat-list-item >
-    <i class="fa fa-search" aria-hidden="true"></i>&nbsp; </a>
+  <mat-list-item *ngIf="userroleSes=='CustomerSes'"  class="menudesk cursorcls" style="margin-left: 506px;"> <a class="colorheaderMenu"   routerLink='/search' [routerLinkActive]="['is-active']" mat-list-item >
+    <i class="fa fa-search" aria-hidden="true"></i>&nbsp;&nbsp;</a>
     
     <!-- <input class="search" type="text" placeholder="Search" > -->
 
