--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,11 @@
+
+// element.style {
+// }
+.carousel-indicators [data-bs-target] {
+    width: 6px !important;
+    
+}
+
 .carousel-item {
     height: 65vh;
     // min-height: 350px;
