--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -246,9 +246,10 @@ text-align:left;
         padding-left: 11px;
         font-size: 17px;
         border-radius: 17px; 
-        width: 293px;
+        width: 341px;
         height: 35px;
         font-style:italic;
+        // margin-left: 109px;
      }
 
     // .lock{
