--- a/src/app/onlinebooking/onlinebooking.component.html
+++ b/src/app/onlinebooking/onlinebooking.component.html
@@ -39,7 +39,7 @@
               </td>
                 <td style="width: 136px">
                   <div >
-                  <label>Registration Number <span class="requiredfield">  *</span></label> <br>
+                  <label>Registration No<span class="requiredfield">  *</span></label> <br>
                   <select   class="carmodelcls" formControlName="vehicle_number"  style="border: 1px solid;height: 34px;width: 119px;" (change)="vehicleBasedModel($event)">
 
                     <option value="">--Select--</option>
