--- a/src/app/shopdashboard/shopdashboard.component.html
+++ b/src/app/shopdashboard/shopdashboard.component.html
@@ -8,8 +8,8 @@
 
           <tr>
           <th  style="display:none;width: 0px;">b</th>
-          <th style="width:8%;text-align: center;" class="fontwghtcls">Booking Id</th>
-          <th style="width: 12%;text-align: center;" class="fontwghtcls">Registration Number</th>
+          <th style="width:8%;text-align: center;padding-left: 12px;" class="fontwghtcls">Booking Id</th>
+          <th style="width: 12%;text-align: center; padding-left: 0px;" class="fontwghtcls">Registration No</th>
           <th style="width:8%;text-align: center;" class="fontwghtcls">Date</th>
           <th style="width:18%;text-align: center;" class="fontwghtcls">Customer Name</th>
            <th style="width:10%;text-align: center;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
@@ -79,9 +79,9 @@
 
               <tr >
                 <th  style="display:none;width: 0px;">b</th>
-              <th style="width:8%;text-align: center;" class="fontwghtcls">Booking Id</th>
-              <th style="width: 12%;text-align: center;" class="fontwghtcls">Registration Number</th>
-              <th style="width:8%;text-align: center;" class="fontwghtcls">Date</th>
+              <th style="width:8%;text-align: center;padding-left: 12px;" class="fontwghtcls">Booking Id</th>
+              <th style="width: 12%;text-align: center;padding-left: 0px;" class="fontwghtcls">Registration No</th>
+              <th style="width:8%;text-align: center;padding-left: 11px;" class="fontwghtcls">Date</th>
               <th style="width:18%;text-align: center;" class="fontwghtcls">Customer Name</th>
              <th style="width:10%;text-align: center;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
               <th   hidden>Status</th>   <!-- for excel print only -->
