--- a/src/app/customer-create/customer-create.component.html
+++ b/src/app/customer-create/customer-create.component.html
@@ -316,14 +316,14 @@
                       <td class="noBorder">
 
                         <div class="form-group">
-                            <label class="customerProfileLbl">Vehicle Number<span class="requiredfield">  *</span></label>
+                            <label class="customerProfileLbl">Registration No<span class="requiredfield">  *</span></label>
                             <input type="text"    style="padding-left: 2px !important;"   class="lastname " placeholder="" formControlName="vehicle_number" style="width: 120px;">
 
                                 <div *ngIf="cardetailForm.controls['vehicle_number'].touched && cardetailForm.controls['vehicle_number'].invalid ">
 
                                     <div *ngIf="cardetailForm.controls['vehicle_number'].errors" style="color: red;">
                                       <div *ngIf="cardetailForm.controls['vehicle_number'].errors.required" style="font-size: 12px;" class="cartypevalid">
-                                          Enter vehicle number
+                                          Enter Registration No
                                       </div>
 
                                    </div>
@@ -470,7 +470,7 @@
 
         <table class="table " style="border: 1px solid #aeaeae;">
             <thead style="background: #202c45; border-bottom: 0.5px solid #aeaeae; color: white;font-weight: 400 !important;">
-              <th class="thfontwt">Vehicle Number</th>
+              <th class="thfontwt">Registration No</th>
               <th class="thfontwt">Type</th>
               <th class="thfontwt">Brand</th>
               <th class="thfontwt">Model</th>
