--- a/src/app/combo-offers/combo-offers.component.html
+++ b/src/app/combo-offers/combo-offers.component.html
@@ -10,9 +10,9 @@
       
   
       <div class="col-sm-5" >
-        <div style="border: 1px solid #aeaeae;margin-left: 30px;background: #b7b7b729;">
+        <div style="border: 1px solid #aeaeae;margin-left: 30px;background: #b7b7b729;height: 154px;">
   <div >
-    <h2 style="text-align: left;" class="mainheading combooffheading">Add Today's Combo Offer</h2>
+    <h2 style="text-align: left;margin-top: 13px;" class="mainheading combooffheading">Add Today's Combo Offer</h2>
         <div class="row dateselectdivcls" >
           
           
