--- a/src/app/shop-service/shop-service.component.html
+++ b/src/app/shop-service/shop-service.component.html
@@ -1,5 +1,5 @@
 <!-- <div style="background-color: #f3f3f3;"> -->
-
+  <div style="overflow: hidden !important;">
 <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
 <h2 style="text-align: center;" class="mainheading">Services/Offer Details</h2>
 
@@ -7,7 +7,7 @@
   <button class="btn btn-success" (click)="DisplayForm()" >Add New Service</button>
 
 </div> -->
-<div style="overflow: hidden !important;">
+
 
 <div class="row">
 
@@ -294,7 +294,7 @@
 
   </div>
 <br><br>
-</div>
+
 <div class="row"  style="margin-bottom: -8px; margin-top: -19px ! important;"  >
   <!-- <div *ngIf="let data of  statuspickupvalue;" > -->
 
@@ -319,9 +319,7 @@
     <span class="slider round"  style="margin-left: 250px;  width: 43px;"></span> -->
   </label>
 
-
+  <div style="height: 30px;"></div>
 <!-- </div> -->
     </div>
-
-  <!-- </div> -->
-<br>
+  </div>
