--- a/src/app/shopdashboard/shopdashboard.component.html
+++ b/src/app/shopdashboard/shopdashboard.component.html
@@ -86,8 +86,8 @@
              <th style="width:10%;text-align: center;" class="fontwghtcls">Total (<span><i class="fa fa-rupee"></i></span>) </th>
               <th   hidden>Status</th>   <!-- for excel print only -->
 
-              <th  style="width:5%;padding-left: 9px !important;" class="fontwghtcls">Status</th>
-              <th style="width:5%;padding-left: 9px !important;" class="fontwghtcls">Update</th>
+              <th  style="width:5%;text-align: center;" class="fontwghtcls">Status</th>
+              <th style="width:5%;text-align: center;" class="fontwghtcls">Update</th>
 
 
             </tr>
@@ -104,14 +104,14 @@
             <tr *ngFor="let b of  posts1;  let i=index;" style="border-bottom:1px solid #aeaeae;text-align: left;">
 
               <td style="display:none;width: 0px;">{{b.id}}</td>
-              <td class="fontwghtcls"><a style="cursor: pointer;color: #26a0fc;text-decoration: underline;margin-left: 44px;" (click)="ViewDetailsPopup(b.Booking_id,'Carwash Status')">{{b.Booking_id}}</a></td>
-              <td><p style="margin-left: 60px;">{{b.vehicle_number}}</p></td>
+              <td class="fontwghtcls"><a style="cursor: pointer;color: #26a0fc;text-decoration: underline;margin-left: 49px;" (click)="ViewDetailsPopup(b.Booking_id,'Carwash Status')">{{b.Booking_id}}</a></td>
+              <td><p style="margin-left: 71px;">{{b.vehicle_number}}</p></td>
               <td>
-                <p style="margin-left: 60px;">{{b.bookingdate | date: 'dd-MM-yyyy'}}</p>
+                <p style="margin-left: 62px;">{{b.bookingdate | date: 'dd-MM-yyyy'}}</p>
               </td>
-              <td style="text-align: left;"><p style="margin-left: 136px;">{{b.firstname}}</p></td>
+              <td style="text-align: left;"><p style="margin-left: 141px;">{{b.firstname}}</p></td>
 
-              <td ><p style="text-align: right;margin-right: 74px;">{{b.payable_amt}}</p></td>
+              <td ><p style="text-align: right;margin-right: 81px;">{{b.payable_amt}}</p></td>
 
                 <td hidden>
                   <span *ngFor="let m1 of  carwashstatus1;" >
@@ -123,7 +123,7 @@
                 </td>
                 <td>
 
-                  <select  style="width: 100px;height: 26px;"   id="carwash_{{b.Booking_id}}" [(ngModel)]="b.carwash_status" >
+                  <select  style="width: 100px;height: 26px;margin-left: 25px;"   id="carwash_{{b.Booking_id}}" [(ngModel)]="b.carwash_status" >
                     <option value="">--Select---</option>
                    <option *ngFor="let c of carwashstatus1" [value]="c.id">
                     {{c.carwash_status_name}}
@@ -131,7 +131,7 @@
                     </select>
 
                 </td>
-              <td>
+              <td style="text-align: center;">
                 <a (click)="updateCarwashStatus(b.Booking_id)"><i style="color: #01992d;font-size: 20px;cursor: pointer;" class="fa fa-check-circle"></i></a>
                </td>
 
