--- a/src/app/shop-profile/shop-profile.component.html
+++ b/src/app/shop-profile/shop-profile.component.html
@@ -181,7 +181,7 @@
 
                 <div class="col-sm-12 form-inline" style="text-align: right;">
             
-                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;margin-top: -21px;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
+                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;margin-top: -21px;" (click)="updateshopinfo(shopprofile1.value)" [disabled]='!shopprofile1.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
                     
             
@@ -369,7 +369,7 @@
 
                 <div class="col-sm-12 form-inline" style="text-align: right;margin-top: -17px;">
             
-                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="uploadFile(shopprofile.value)" [disabled]='!shopprofile.valid' >Update</button>
+                    <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;" (click)="uploadFile(shopprofile.value)" [disabled]='!shopprofile.valid' >Update</button>
                     <!-- [disabled]='!shopprofile.valid' -->
                     
             
@@ -453,7 +453,7 @@
 <br>
                             <div class="col-sm-11 form-inline workinghoursupdcls" style="text-align: right;">
             
-                                <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;font-weight: bold;" (click)="updateworkinghours(shopprofile2.value)" [disabled]='!shopprofile2.valid' >Update</button>
+                                <button class="btn btn-success allSubmitbtn" style=" width: 68px;border: none;height: 28px;" (click)="updateworkinghours(shopprofile2.value)" [disabled]='!shopprofile2.valid' >Update</button>
                                 <!-- [disabled]='!shopprofile.valid' -->
                                 
                         
