--- a/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
+++ b/src/app/shopowner-onlinebooking/shopowner-onlinebooking.component.html
@@ -79,7 +79,7 @@
               <td style="width: 130px">
 
                 <div >
-                <label>Registration Number <span class="requiredfield">  *</span></label> <br>
+                <label>Registration No<span class="requiredfield">  *</span></label> <br>
                 <select   class="carmodelcls" formControlName="vehicle_number" id="box1"  style="border: 1px solid;height: 34px;width: 119px;background: white;"  >
 
                   <!-- <option value="">--Select--</option>   -->
