--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,17 @@
 //     right: 0;
 //     background: rgb(155, 184, 26);
 //     }
+
+
+.menuitemcss{
+    background-color: #0c6d62;
+    height: 97px;
+    /* margin-bottom: 113px; */
+    border-bottom: 5px solid;
+    border-block-color: #74b887;
+}
 .is-active {
-    color: #2700ff !important;
+    color: #74b887 !important;
     font-weight: bolder !important;
 }
 
@@ -54,7 +63,7 @@
     }
 
     .colorheaderMenu{
-    color: black;
+    color: #fefefe;
     text-decoration: none;
     font-size: 17px;
     //font-weight:500;
@@ -63,7 +72,10 @@
     }
 
     .mat-toolbar.mat-primary {
-        background: #ffffff;
+        background: #0c6d62;
+        height: 83px !important;
+        border-color: #FFFFFF;
+    border-width: 0px 0px 4px;
         
     }
 
@@ -246,7 +258,7 @@ text-align:left;
         padding-left: 11px;
         font-size: 17px;
         border-radius: 17px; 
-        width: 341px;
+        width: 326px;
         height: 35px;
         font-style:italic;
         // margin-left: 109px;
