--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <mat-sidenav-container fullscreen id="cont_id">
   <!-- <h5><u><i>Footer creation using angular material !!</i></u></h5> -->
   <mat-sidenav #sidenav class="sidenavstyle" >
-  <mat-list >
+  <mat-list class="menuitemcss" >
 
 
     <!-- customer mobile start -->
@@ -160,7 +160,7 @@
     <router-outlet (activate)="onActivate($event)"></router-outlet>
 
      
-
+<div style="height: 60px;"></div>
 
 <div class="footer" style="height: 340px;background-color: #202c45 !important;" #footer id="footerdisplay">
   <footer class=" page-footer font-small blue pt-4">
