--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -159,8 +159,8 @@
   <!-- <mat-sidenav-content> -->
     <router-outlet (activate)="onActivate($event)"></router-outlet>
 
-     
-<div style="height: 60px;"></div>
+   <br>  
+<!-- <div style="height: 60px;"></div> -->
 
 <div class="footer" style="height: 340px;background-color: #202c45 !important;" #footer id="footerdisplay">
   <footer class=" page-footer font-small blue pt-4">
@@ -188,12 +188,7 @@
 <p class="bloglinkMob">
   <a href="#" ><i class="fa fa-arrow-right" style="font-size:8px"></i> &nbsp;Blog</a>
 </p>
-                  <!-- <a href="#"><i class="fa fa-arrow-right" style="font-size:8px"></i> &nbsp;Online Booking</a> -->
-                  <!-- <a href="#"><i class="fa fa-arrow-right" style="font-size:8px"></i> &nbsp;Offers and Deals</a> -->
-
-
-                    <!-- <a *ngIf="!userroleSes" class="" style="cursor: pointer;padding-top:0px !important;margin-top:0px!important;" (click)="loginCheck();login()" ><i class="fa fa-arrow-right" style="font-size:8px"></i> &nbsp;For Shop</a> -->
-
+                
                   </div>
               </div>
           </div>
