--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,8 +72,8 @@
     }
 
     .mat-toolbar.mat-primary {
-        background: #0c6d62;
-        height: 83px !important;
+        background: linear-gradient(to bottom, #adad00 0%, #d1d100 100%) !important;
+        height: 75px !important;
         border-color: #FFFFFF;
     border-width: 0px 0px 4px;
         
